# ProjetoPI2

formularios_flask/: .gitignore  .pylintrc  instructions.txt  main.py  pyproject.toml
formularios_flask/static/: styles.css
formularios_flask/templates/: index.html  index2.html  login.html  register.html
